# p2p_messenger

./: CMakeLists.txt  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  pom.xml
src/: CMakeLists.txt
src/client/: account_handler.cpp  account_handler.h  client.cpp  client.h  main.cpp  message_handler.cpp  message_handler.h  security.cpp  security.h  test_client.cpp
src/main/java/org/p2p/client/: Client.java
src/main/java/org/p2p/server/: ClientIpEntity.java  ClientIpRepo.java  ClientIpRepository.java  ClientIpService.java  HibernateUtil.java  Main.java
src/main/proto/: client_to_client.proto  client_to_server.proto
src/main/resources/: application.properties  hibernate.cfg.xml
src/proto/: client_to_client.proto  client_to_server.proto
src/protos/: client_to_client.proto  client_to_server.proto
src/server/: test_server.cpp
